Input method container: ensure button is visible on large containers

--- a/src/common/components/input_method.scss
+++ b/src/common/components/input_method.scss
@@ -97,6 +97,7 @@
   }
   &.full {
     max-height: 87vh;
+    overflow-y: auto;
   }
   &.tall .content {
     max-height: 65vh;
